# rockbox-database-manager

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .rdbm_config_example.toml  Dockerfile  LICENSE  PLATFORM_NOTES.md  README.md  README_src.txt  database.py  diagnose_gui.sh  gui.fbp  gui.pyw  indexfile.py  launch_gui.sh  main.py  mypy.ini  pyproject.toml  pytest.ini  rbdb.py  rblib.py  rdbm.sh  setup.py  tagfile.py  test_gui_imports.py  test_memory_efficiency.py  test_wx.py  utils.py  wxFB_gui.py
Legacy_Codebase/: README.txt  database.py  defs.py  gui.fbp  gui.pyw  indexfile.py  rbdb.py  rblib.py  setup.py  tagfile.py  utils.py  wxFB_gui.py
profiling/: .gitignore  README.md  __init__.py  analyze_performance.py  memory_profile.py  profile_database_generation.py  profile_tag_parsing.py  profile_titleformat.py
src/rockbox_db_manager/: __init__.py  backup.py  cli.py  config.py  constants.py  database.py  defs.py  gui.py  indexfile.py  rbdb.py  rblib.py  tagfile.py  utils.py  wxFB_gui.py
src/rockbox_db_manager/cli/: __init__.py  callbacks.py  schemas.py  utils.py
src/rockbox_db_manager/cli/commands/: __init__.py  detect_mounts.py  generate.py  inspect.py  load.py  update.py  validate.py  watch.py  write.py
src/rockbox_db_manager/database/: __init__.py  cache.py  file_scanner.py  generator.py  io.py  mount_detector.py  rename_detector.py
src/rockbox_db_manager/gui/: __init__.py  app.py  async_operations.py  cancellable_progress.py  error_handling.py  field_panes.py  info_panel.py  progress.py  thread_events.py  wxFB_gui.py
src/rockbox_db_manager/gui/main_frame/: __init__.py  database_operations.py  format_manager.py  frame.py  thread_handlers.py  threading_support.py
src/rockbox_db_manager/tagging/: __init__.py  tag.py
src/rockbox_db_manager/tagging/tag/: __init__.py  core.py  formats.py  tagfile.py  utils.py
src/rockbox_db_manager/tagging/titleformat/: __init__.py  base.py  conditional.py  field.py  function.py  statement.py  string.py  tagbool.py  utils.py
tagging/: __init__.py  tag.py
tagging/titleformat/: __init__.py  conditional.py  field.py  function.py  statement.py  string.py  tagbool.py  utils.py
tests/: .performance_baselines.json  FIXES_SUMMARY.md  README.md  TEST_STATUS.md  __init__.py  conftest.py  test_backup.py  test_benchmarks.py  test_cli.py  test_config_cache.py  test_cpu_efficiency.py  test_cross_compilation.py  test_database.py  test_headless.py  test_indexfile.py  test_memory_efficiency.py  test_performance_regression.py  test_tagfile.py  test_utils.py
(+4 files in other folders)
