[project]
name = "rockbox-db-manager"
version = "0.4.0"
description = "A Python application for managing Rockbox database files with a wxPython GUI and CLI."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Vakintosh", email = "hello@vakintosh.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "mutagen>=1.47.0",
    "tomli-w>=1.0.0",
    "rich>=13.0.0",
    "rich-argparse>=1.7.0",
    "watchdog>=3.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
gui = [
    "wxpython>=4.2.4",
]

[project.scripts]
rdbm = "rockbox_db_manager.cli:main"
rockbox-db-manager = "rockbox_db_manager.gui:main"

[project.gui-scripts]
rockbox-db-manager-gui = "rockbox_db_manager.gui:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "ruff>=0.14.10",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.61.0",
    "mypy>=1.15.0",
]

[tool.uv]
package = true
